[package]
name = "datefilter"
version = "0.1.6"
edition = "2021"
description = "Filter filenames on stdin to exclude filenames for dates which should be kept, and filenames not containing dates."
license = "Apache-2.0"
authors = ["fadedbee <datefilter@fadedbee.com>"]
publish = true
readme = "README.md"
repository = "https://github.com/fadedbee/datefilter"

[package.metadata.deb]
assets = [
    # binary
    ["target/release/datefilter", "usr/bin/", "755"],
]
maintainer-scripts = "debian/"
depends = ""

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
regex = "1.11.1"
